@startuml
!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <color:red>◆</color> x
!define foreign_key(x) <color:blue>◇</color> x
!function VARCHAR($x) !return "VARCHAR_" + $x

left to right direction
hide methods
hide stereotypes
skinparam classFontColor red
skinparam classAttributeIconSize 0
skinparam defaultFontName Courier

table(Location) {
    primary_key(location_id): INT
    description: TEXT
    address: VARCHAR(255)
    url: VARCHAR(255)
}
table(Session) {
    primary_key(session_id): INT
    foreign_key(location_id): INT
    session_date: DATE
    start_time: TIME
    end_time: TIME
    description: TEXT
}
table(SetToSession) {
    foreign_key(session_id): INT
    foreign_key(set_id): INT
    set_index: INT
}
table(SetTable) {
    primary_key(set_id): INT
    description: TEXT
}
table(TuneToSet) {
    foreign_key(tune_id): INT
    foreign_key(set_id): INT
    tune_index: INT
}
table(Tune) {
    primary_key(tune_id): INT
    the_session_tune_id: INT
    name: VARCHAR(255)
    abc: TEXT
    tune_type: VARCHAR(255)
    tune_meter: VARCHAR(255)
    tune_mode: VARCHAR(255)
    tune_url: VARCHAR(255)
}

Location::location_id o-- Session::location_id
Session::session_id o-- SetToSession::session_id
SetToSession::set_id --o SetTable::set_id
TuneToSet::tune_id --o Tune::tune_id
SetTable::set_id o-- TuneToSet::set_id

@enduml
